force-app/main/default/objects/KB_Localized_Prompt_Text__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>ISO language code this record's Value__c is written in, e.g. en, pl, de. Matched case-insensitively against the article's Language (base language of a locale like en_US is used). The 'en' record is the fallback used when the article's language has no record for this key.</description>
    <label>Language Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>