force-app/main/default/objects/KB_Localized_Prompt_Text__mdt/fields/Text_Key__c.field-meta.xml
<CustomField>
    <fullName>Text_Key__c</fullName>
    <description>Logical identifier for the string being localized, e.g. FIX_LANGUAGE_DIRECTIVE. Matched case-insensitively by KBLocalizedText.get(). A key groups one record per language.</description>
    <label>Text Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>