force-app/main/default/objects/KB_Localized_Prompt_Text__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The localized string, written in the language named by Language_Code__c. Supports a {LANG} token which KBLocalizedText.get() replaces with the resolved base language code at read time (used by the English fallback record to name the target language).</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>